tests/baselines/reference/missingRequiredDeclare.d.errors.txt
tests/cases/compiler/missingRequiredDeclare.d.ts(1,1): error TS1046: A 'declare' modifier is required for a top level declaration in a .d.ts file.
tests/cases/compiler/missingRequiredDeclare.d.ts(1,7): error TS1039: Initializers are not allowed in ambient contexts.


==== tests/cases/compiler/missingRequiredDeclare.d.ts (2 errors) ====
    var x = 1;
    ~~~
!!! error TS1046: A 'declare' modifier is required for a top level declaration in a .d.ts file.
          ~
!!! error TS1039: Initializers are not allowed in ambient contexts.